--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -32,6 +32,7 @@ table{
 
 tr{
     height: 90px;
+    text-align: center;
 }
 
 th{
@@ -95,4 +96,23 @@ button{
 input::placeholder{
     color:orangered;
     opacity: 0.5;
+}
+
+.image-container{
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+    object-fit: contain;
+}
+
+.image-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    width: 100%;
+    height: 100%;
 }
