--- a/views/addcars.ejs
+++ b/views/addcars.ejs
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="add-car-container">
-            <form action="/api/new" method="POST" enctype="application/x-www-form-urlencoded">
+            <form action="/api/new" method="POST" enctype="multipart/form-data">
                 <label for="model">Model:</label>
                 <input placeholder="model" type="text" name="model"><br>
                 <label for="color">Color:</label>
@@ -33,6 +33,8 @@
                 <input placeholder="seats" type="text" name="seats"><br>
                 <label for="transmission">Tranmission:</label>
                 <input placeholder="transmission" type="text" name="transmission"><br>
+                <label for="carImage">Image:</label>
+                <input type="file" name="carImage">
                 <button type="submit">Add</button>
             </form>
         </div>
